<resources>
    <string name="app_name">Polupokemon</string>
    <string name="pokemon_detail">Pokemon Detail</string>
    <string name="name">Name: %1$s</string>
    <string name="height">Height: %1$d</string>
    <string name="base_exp">Base exp: %1$d</string>
    <string name="type_normal">Normal</string>
    <string name="type_fighting">Fighting</string>
    <string name="type_flying">Flying</string>
    <string name="type_poison">Poison</string>
    <string name="type_ground">Ground</string>
    <string name="type_rock">Rock</string>
    <string name="type_bug">Bug</string>
    <string name="type_ghost">Ghost</string>
    <string name="type_steel">Steel</string>
    <string name="type_fire">Fire</string>
    <string name="type_water">Water</string>
    <string name="type_grass">Grass</string>
    <string name="type_electric">Electric</string>
    <string name="type_psychic">Psychic</string>
    <string name="type_ice">Ice</string>
    <string name="type_dragon">Dragon</string>
    <string name="type_dark">Dark</string>
    <string name="type_fairy">Fairy</string>
    <string name="type_stellar">Stellar</string>
    <string name="type_unknown">Unknown</string>
    <string name="type_shadow">Shadow</string>
    <string name="detail_types">Types</string>
    <string name="detail_ability">Ability: %1$s</string>
</resources>